# ChangeLog for dev-java/httpcomponents-core
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*httpcomponents-core-4.3 (30 Nov 2013)

  30 Nov 2013; Johann Schmitz <ercpe@gentoo.org>
  +httpcomponents-core-4.3.ebuild, +metadata.xml:
  Version bump of httpcomponents-core