@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  30 Nov 2013; Johann Schmitz <ercpe@gentoo.org> httpcomponents-core-4.3.ebuild,
+  metadata.xml:
+  Added support for building deprecated classes (required for httpcomponents-
+  client)
+
 *httpcomponents-core-4.3 (30 Nov 2013)
 
   30 Nov 2013; Johann Schmitz <ercpe@gentoo.org>
